添加文章详情， 文章管理

--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -75,7 +75,7 @@
             <div class="uk-panel uk-margin-top uk-margin-bottom">
                 <p>
                     <a target="_blank" href="http://weibo.com/3173842854/profile?topnav=1&wvr=6&is_all=1" class="uk-icon-button uk-icon-weibo"></a>
-                    <a target="_blank" href="https://github.com/yahua" class="uk-icon-button uk-icon-twitter"></a>
+                    <a target="_blank" href="https://github.com/yahua" class="uk-icon-button uk-icon-github"></a>
                 </p>
                 <p>Powered by <a href="http://awesome.liaoxuefeng.com">Awesome Python Webapp</a>. Copyright &copy; 2014. [<a href="/manage/" target="_blank">Manage</a>]</p>
                 <p><a href="http://www.liaoxuefeng.com/" target="_blank">www.liaoxuefeng.com</a>. All rights reserved.</p>
