--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -47,6 +47,11 @@
                     <li class="uk-parent" data-uk-dropdown>
                         <a href="#0"><i class="uk-icon-user"></i> {{ __user__.name }}</a>
                         <div class="uk-dropdown uk-dropdown-navbar">
+                            {% if __user__.admin %}
+                                <ul class="uk-nav uk-nav-navbar">
+                                    <li><a href="/manage/blogs"><i class="uk-icon-list"></i> 管理</a></li>
+                                </ul>
+                            {% endif %}
                             <ul class="uk-nav uk-nav-navbar">
                                 <li><a href="/signout"><i class="uk-icon-sign-out"></i> 登出</a></li>
                             </ul>
