首页添加分页功能， 用户管理管理员显示在最前面

--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -35,7 +35,7 @@ $(function () {
                     return $form.showFormError('两次输入的口令不一致');
                 }
                 var email = this.email.trim().toLowerCase();
-                $form.postJSON('/api/users', {
+                $form.postJSON('/api/register_user', {
                     name: this.name.trim(),
                     email: email,
                     passwd: CryptoJS.SHA1(email + ':' + this.password1).toString()
