--- a/www/templates/manage_blogs.html
+++ b/www/templates/manage_blogs.html
@@ -85,7 +85,7 @@ $(function() {
                         <a target="_blank" v-attr="href: '/blog/'+blog.id" v-text="blog.name"></a>
                     </td>
                     <td>
-                        <a target="_blank" v-attr="href: '/user/'+blog.user_id" v-text="blog.user_name"></a>
+                        <span v-text="blog.user_name"></span>
                     </td>
                     <td>
                         <span v-text="blog.created_at.toDateTime()"></span>
