--- a/www/templates/manage_comments.html
+++ b/www/templates/manage_comments.html
@@ -17,8 +17,8 @@ function initVM(data) {
         methods: {
             delete_comment: function (comment) {
                 var content = comment.content.length > 20 ? comment.content.substring(0, 20) + '...' : comment.content;
-                if (confirm('确认要删除评论“' + comment.content + '”？删除后不可恢复！')) {
-                    postJSON('/api/comments/' + comment.id + '/delete', function (err, r) {
+                if (confirm('确认要删除评论“' + content + '”？删除后不可恢复！')) {
+                    postJSON('/api/comments/delete/' + comment.id, function (err, r) {
                         if (err) {
                             return error(err);
                         }
